testsuite/bsc.interra/messages/ENotAnInterface/ENotAnInterface.bs.bsc-out.expected
checking package dependencies
compiling ENotAnInterface.bs
Error: "ENotAnInterface.bs", line 22, column 24: (T0038)
  Not of interface type
